Updated libraries and put a workaround for recording stream handle turning invalid