@@ -1,38 +1,48 @@
 plugins {
     id 'java'
     id 'application'
-    id "com.github.johnrengelman.shadow" version "5.2.0"
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group 'net.runee'
 version '1.0-SNAPSHOT'
 
-compileJava.options.encoding = 'UTF-8'
 sourceCompatibility = JavaVersion.VERSION_1_8
 mainClassName = 'net.runee.gui.MainFrame'
 
 repositories {
     mavenCentral()
-    maven {
-        name 'm2-dv8tion'
-        url 'https://m2.dv8tion.net/releases'
-    }
 }
 
 dependencies {
-    implementation "net.dv8tion:JDA:4.3.0_291"
-//    implementation "com.sedmelluq:lavaplayer:1.3.42"
-    implementation "com.jgoodies:jgoodies-forms:1.9.0"
-    implementation "com.jgoodies:jgoodies-common:1.8.1"
-    implementation "com.jgoodies:jgoodies-looks:2.7.0"
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'net.dv8tion:JDA:5.0.0-beta.6'
+//    implementation 'com.sedmelluq:lavaplayer:1.3.42'
+    implementation 'com.jgoodies:jgoodies-forms:1.9.0'
+    implementation 'com.jgoodies:jgoodies-common:1.8.1'
+    implementation 'com.jgoodies:jgoodies-looks:2.7.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
-//    implementation "org.slf4j:slf4j-simple:1.7.30"
-    implementation 'ch.qos.logback:logback-classic:1.2.9'
-    implementation files("libs/NativeBass.jar")
+//    implementation 'org.slf4j:slf4j-simple:1.7.30'
+    implementation 'ch.qos.logback:logback-classic:1.4.6'
+    implementation 'org.realityforge.javax.annotation:javax.annotation:1.0.1'
+    implementation files('libs/NativeBass.jar')
 }
 
 tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
     options.compilerArgs << '-Xlint:unchecked'
     options.deprecation = true
+}
+
+run {
+    jvmArgs = [
+        '-Djava.library.path=natives/win64/',
+        '--add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED'
+    ]
+}
+runShadow {
+    jvmArgs = [
+        '-Djava.library.path=natives/win64/',
+        '--add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED'
+    ]
 }
